--- a/app/guitars/partials/advancedSearch.html
+++ b/app/guitars/partials/advancedSearch.html
@@ -2,95 +2,113 @@
 
 <div class="advancedSearchContentWrapper">
 
-    <div class="basicSearchLinkWrapper">
-        <button ng-click="toBasicSearch()">Basic Search</button>
-    </div>
-
-
+    
+    
     <div class="advancedSearchDivWrapper">
+        
+            <div class="basicSearchLinkWrapper">
+                <button ng-click="toBasicSearch()">Basic Search</button>
+            </div>
 
-            <h3>Advanced Search:</h3>
+            <h3 class="advSearchTitleClass">Advanced Search:</h3>
 
             <div class="advancedSearchDivWrapperTwo">
 
                 <div class="advSearchRowOne">
 
-                    <p class="guitarBrandTitle">Guitar Brand</p>
-                    <p class="guitarBrandSubTitle">*required</p>
-                    <input class="guitarBrandInput" type="text" ng-model="guitarBrandInput">
-                
-                    <p class="guitarModelTitle">Guitar model</p>
-                    <p class="guitarModelSubTitle">*required</p>
-                    <input class="guitarModelInput" type="text" ng-model="guitarModelInput">
-                
-                    <p class="guitarYearTitle">Year of Production</p>
-                    <p class="guitarYearSubTitle">(if unknown leave blank)</p>
-                    <input class="guitarYearInput" type="text" ng-model="yearInput">
-                    
+                    <div class="guitarBrandWrapper">
+                        <p class="guitarBrandTitle">Guitar Brand</p>
+                        <p class="guitarBrandSubTitle">*required</p>
+                        <input class="guitarBrandInput" type="text" ng-model="guitarBrandInput">
+                    </div>
+
+                    <div class="guitarModelWrapper">
+                        <p class="guitarModelTitle">Guitar model</p>
+                        <p class="guitarModelSubTitle">*required</p>
+                        <input class="guitarModelInput" type="text" ng-model="guitarModelInput">
+                    </div>
+
+                    <div class="guitarYearWrapper">
+                        <p class="guitarYearTitle">Year of Production</p>
+                        <p class="guitarYearSubTitle">(if unknown leave blank)</p>
+                        <input class="guitarYearInput" type="text" ng-model="yearInput">
+                    </div>
+
                 </div>
 
                 <div class="advSearchRowTwo">
 
-                    <p class="guitarConditionTitle">Select Instrument Condition</p>
-                    <p class="guitarConditionSubTitle">*required</p>
-                    <select class="guitarConditionInput" ng-options="value for value in conditionValues" ng-model="selectedCondition">
-                        <option value="">select condition</option>
-                    </select>
-
-                    <p class="guitarOrBassTitle">Guitar or Bass?</p>
-                    <p class="guitarOrBassSubTitle">*required</p>
-                    <div class="guitarOrBassInput">
-                        <label class="guitarRadio">
-                            Guitar
-                            <input ng-model="guitarBass" value="guitar" type="radio" name="guitarOrBass">
-                        </label>
-                        <label class="bassRadio">
-                            Bass
-                            <input ng-model="guitarBass" value="bass" type="radio" name="guitarOrBass">
-                        </label>
+                    <div class="guitarConditionWrapper">
+                        <p class="guitarConditionTitle">Select Instrument Condition</p>
+                        <p class="guitarConditionSubTitle">*required</p>
+                        <select class="guitarConditionInput" ng-options="value for value in conditionValues" ng-model="selectedCondition">
+                            <option value="">select condition</option>
+                        </select>
                     </div>
 
-                    <p class="electricAcousticTitle">Electric or Acoustic?</p>
-                    <p class="electricAcousticSubTitle">(if guitar is acoustic with an electric pickup, select acoustic)</p>
-                    <div class="electricAcousticInput">
-                        <label class="electricButton">
-                            Electric
-                            <input ng-model="electricAcoustic" value="electric" type="radio" name="guitarType">
-                        </label>
-                        <label class="acousticButton">
-                            Acoustic
-                            <input ng-model="electricAcoustic" value="acoustic" type="radio" name="guitarType">
-                        </label>
+                    <div class="guitarOrBassWrapper">
+                        <p class="guitarOrBassTitle">Guitar or Bass?</p>
+                        <p class="guitarOrBassSubTitle">*required</p>
+                        <div class="guitarOrBassInput">
+                            <label class="guitarRadio">
+                                Guitar
+                                <input ng-model="guitarBass" value="guitar" type="radio" name="guitarOrBass">
+                            </label>
+                            <label class="bassRadio">
+                                Bass
+                                <input ng-model="guitarBass" value="bass" type="radio" name="guitarOrBass">
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="electricAcousticWrapper">
+                        <p class="electricAcousticTitle">Electric or Acoustic?</p>
+                        <p class="electricAcousticSubTitle">(if guitar is acoustic with an electric pickup, select acoustic)</p>
+                        <div class="electricAcousticInput">
+                            <label class="electricButton">
+                                Electric
+                                <input ng-model="electricAcoustic" value="electric" type="radio" name="guitarType">
+                            </label>
+                            <label class="acousticButton">
+                                Acoustic
+                                <input ng-model="electricAcoustic" value="acoustic" type="radio" name="guitarType">
+                            </label>
+                        </div>
                     </div>
 
                 </div>
 
                 <div class="advSearchRowThree">
 
-                        <p class="guitarFinishTitle">Color and/or Finish</p>
-                        <p class="guitarFinishSubTitle">(leave blank if unkown)</p>
-                        <input class="guitarFinishInput" type="text" ng-model="finishInput">
-
-                        <p class="guitarCountryTitle">Country of Origin</p>
-                        <p class="guitarCountrySubTitle">(leave blank if unknown)</p>
-                        <input class="guitarCountryInput" type="text" ng-model="guitarCountryInput">
-
-                        <p class="vintageTitle">Is it vintage?(30 years or older)</p>
-                        <p class="vintageSubTitle">*required</p>
-                        <div class="vintageInput">
-                            <label class="vintageYesButton">
-                                Yes
-                                <input ng-model="vintageCheck" value="yes" type="radio" name="vintageSelect">
-                            </label>
-                            <label class="vintageNoButton">
-                                No
-                                <input ng-model="vintageCheck" value="no" type="radio" name="vintageSelect">
-                            </label>
+                        <div class="guitarFinishWrapper">
+                            <p class="guitarFinishTitle">Color and/or Finish</p>
+                            <p class="guitarFinishSubTitle">(leave blank if unkown)</p>
+                            <input class="guitarFinishInput" type="text" ng-model="finishInput">
                         </div>
 
+                        <div class="guitarCountryWrapper">
+                            <p class="guitarCountryTitle">Country of Origin</p>
+                            <p class="guitarCountrySubTitle">(leave blank if unknown)</p>
+                            <input class="guitarCountryInput" type="text" ng-model="guitarCountryInput">
+                        </div>
+
+                        <div class="vintageWrapper">
+                            <p class="vintageTitle">Is it vintage?(30 years or older)</p>
+                            <p class="vintageSubTitle">*required</p>
+                            <div class="vintageInput">
+                                <label class="vintageYesButton">
+                                    Yes
+                                    <input ng-model="vintageCheck" value="yes" type="radio" name="vintageSelect">
+                                </label>
+                                <label class="vintageNoButton">
+                                    No
+                                    <input ng-model="vintageCheck" value="no" type="radio" name="vintageSelect">
+                                </label>
+                            </div>
+                        </div>
                 </div>
             </div>
-            <button ng-click="getAdvancedPrice(guitarBrandInput, guitarModelInput, electricAcoustic, vintageCheck, selectedCondition, finishInput, yearInput, guitarBass, guitarCountryInput)">Search</button>
+            <button class="advSearchButtonClass" ng-click="getAdvancedPrice(guitarBrandInput, guitarModelInput, electricAcoustic, vintageCheck, selectedCondition, finishInput, yearInput, guitarBass, guitarCountryInput)">Search</button>
         <div>
             <img ng-show="loading" src="../images/ajax-loader.gif">
         </div>
