updated adv search radio buttons with font awesome icons and angularjs hide show

--- a/css/advSearch.css
+++ b/css/advSearch.css
@@ -438,3 +438,13 @@
 }
 
 
+/*button styling attempts*/
+
+input[type="radio"] {
+    display: none;
+}
+
+.honk {
+    background-color: aqua;
+    border-radius: 100%;
+}
