--- a/app/guitars/partials/advancedSearch.html
+++ b/app/guitars/partials/advancedSearch.html
@@ -1,12 +1,9 @@
 <div ng-include="'app/userGear/partials/userNav.html'"></div>
 
 <div class="advancedSearchContentWrapper">
-
-    
-    
+   
     <div class="advancedSearchDivWrapper">
         
-
             <h3 class="advSearchTitleClass">Advanced Search</h3>
 
             <div class="advancedSearchDivWrapperTwo">
@@ -49,10 +46,22 @@
                         <div class="guitarOrBassInput">
                             <label class="guitarRadio">
                                 Guitar
-                                <input ng-model="guitarBass" value="guitar" type="radio" name="guitarOrBass">
+                                <span ng-show="guitarBass === 'guitar'">
+                                    <i class="far fa-circle honk"></i>
+                                </span>
+                                <span ng-show="guitarBass !== 'guitar'">
+                                    <i class="far fa-circle"></i>
+                                </span>
+                                <input class="guitarRadioButton" ng-model="guitarBass" value="guitar" type="radio" name="guitarOrBass">
                             </label>
                             <label class="bassRadio">
                                 Bass
+                                <span ng-show="guitarBass === 'bass'">
+                                    <i class="far fa-circle honk"></i>
+                                </span>
+                                <span ng-show="guitarBass !== 'bass'">
+                                    <i class="far fa-circle"></i>
+                                </span>
                                 <input ng-model="guitarBass" value="bass" type="radio" name="guitarOrBass">
                             </label>
                         </div>
@@ -64,10 +73,22 @@
                         <div class="electricAcousticInput">
                             <label class="electricButton">
                                 Electric
+                                <span ng-show="electricAcoustic === 'electric'">
+                                    <i class="far fa-circle honk"></i>
+                                </span>
+                                <span ng-show="electricAcoustic !== 'electric'">
+                                    <i class="far fa-circle"></i>
+                                </span>
                                 <input ng-model="electricAcoustic" value="electric" type="radio" name="guitarType">
                             </label>
                             <label class="acousticButton">
                                 Acoustic
+                                <span ng-show="electricAcoustic === 'acoustic'">
+                                    <i class="far fa-circle honk"></i>
+                                </span>
+                                <span ng-show="electricAcoustic !== 'acoustic'">
+                                    <i class="far fa-circle"></i>
+                                </span>
                                 <input ng-model="electricAcoustic" value="acoustic" type="radio" name="guitarType">
                             </label>
                         </div>
@@ -95,10 +116,22 @@
                             <div class="vintageInput">
                                 <label class="vintageYesButton">
                                     Yes
+                                    <span ng-show="vintageCheck === 'yes'">
+                                        <i class="far fa-circle honk"></i>
+                                    </span>
+                                    <span ng-show="vintageCheck !== 'yes'">
+                                        <i class="far fa-circle"></i>
+                                    </span>
                                     <input ng-model="vintageCheck" value="yes" type="radio" name="vintageSelect">
                                 </label>
                                 <label class="vintageNoButton">
                                     No
+                                    <span ng-show="vintageCheck === 'no'">
+                                        <i class="far fa-circle honk"></i>
+                                    </span>
+                                    <span ng-show="vintageCheck !== 'no'">
+                                        <i class="far fa-circle"></i>
+                                    </span>
                                     <input ng-model="vintageCheck" value="no" type="radio" name="vintageSelect">
                                 </label>
                             </div>
