--- a/app/guitars/partials/advancedSearch.html
+++ b/app/guitars/partials/advancedSearch.html
@@ -5,9 +5,12 @@
     <div class="advancedSearchDivWrapper">
 
             <div class="searchHeaderWrapper">
-                <h3 class="advSearchTitleClass">Advanced Search</h3>
+                <div class="advSearchTitleWrapper">
+                    <h3 class="advSearchTitleClass">Advanced Search</h3>
+                    <h2 class="advSearchInstructions">fill out the fields below to obtain detailed information about a guitar</h2>
+                </div>
                 <div class="basicSearchLinkWrapper">
-                    <p class="basicSearchLinkTitle">Return to basic search</p>
+                    <h4 class="basicSearchLinkTitle">If your not getting the results you want, head back to the basic search</h4>
                     <button class="basicSearchLinkButton" ng-click="toBasicSearch()">Basic Search</button>
                 </div>
             </div>
